perf(home): /api/home の参加率グループ構築で月間データを1回だけロードする
従来は HomeController がグループ×(top3/myRate)ごとに computeAllParticipationRates を
最大6回フル実行し、そのたびに月間セッション・参加者全件・players全件を再ロードしていた。
DBとのRTTが大きい環境（ローカル開発→Render オレゴン、RTT~170ms）では /api/home が
実測15〜24秒かかる原因になっていた。

- PracticeParticipantService.getParticipationGroups を新設: 月間データ
  （sessions/participants/団体メンバー/players名）を1回だけロードし、
  全グループ（全体+各団体）の top3 と myRate をメモリ上で導出
- buildParticipationRates の names をパラメータ化（内部の findAllActive 呼び出しを撤去）
- HomeController は新メソッド1呼び出しに置換。孤児化した団体スコープの
  オーバーロード4本 + private compute 2本を削除
- PlayerOrganizationRepository.findByOrganizationIdIn を追加（メンバー取得を1クエリ化）
- 既存テスト2件を新メソッド経由に書き換え + 複数団体グルーピングと
  「各リポジトリ1回だけロード」を検証する回帰テストを追加

レスポンス形状（HomeDto）は不変のためフロントエンド変更なし。

Co-Authored-By: Claude <noreply@anthropic.com>